# fast-er

./: .Makefile.swp  .gitignore  .learn_detector.cfg.swp  Doxyfile  LICENSE  Makefile  Makefile.in  README  README.md  best_faster.tree  configure  configure.ac  cvd_fast.cc  cvd_fast.h  detectors.cc  detectors.h  documentation.h  dog.cc  dog.h  extract_FAST_features.cc  extract_fast_n_features.cc  extract_features.cc  extract_features.cfg  fast_N_features.cc  fast_tree_to_C_score_bsearch  fast_tree_to_cxx_score_bsearch  fast_tree_to_cxx_score_iterate  fast_tree_to_matlab  fast_tree_to_matlab_score_bsearch  fast_tree_to_python_score_bsearch  faster_bytecode.cc  faster_bytecode.h  faster_detector.cc  faster_detector.h  faster_tree.cc  faster_tree.h  gvars_vector.h  harrislike.cc  harrislike.h  image_warp.cc  (+20 more)
fast_trees/: FAST_trees.tar.bz2
tag/: fn.h
varprintf/: printf.cc  varprintf.h
